Bytte bakgrund, fixat tidigare overflowproblem, lade till under-construction-subsida

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
     margin: 0;
-    padding: 0;
     background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
+    font-family: Calibri, sans-serif;
+    overflow-x: hidden;
+    color: #ffffff;
 }
 
 .header {
-    background-color: #242c34;
+    background-color: #342428;
     color: #f2f2f2;
     padding: 10px;
     text-align: center;
@@ -18,35 +18,39 @@ h1 {
     text-align: center;
 }
 
+#stretch {
+    padding-bottom: 100%;
+}
+
+#overflowpass {
+    overflow: hidden;
+}
+
 .main {
-    background: linear-gradient(#2ca39c40, #00000040), url(./images/background.webp);
+    background: linear-gradient(#95735e40, #00000040), url(./images/background.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    padding-bottom: 100%;
     background-color: #63686d;
 }
 
 .recipes {
     background-color: #00000080;
     border-radius: 4vh;
-    width: 80%;
+    width: 300px;
     padding: 1vw;
     margin: auto;
 }
 
-
-.list {
-    color: #ffffff00;
-    text-align: center;
-}
-
-ul, ol {
+ul,
+ol {
+    padding: 0;
     row-gap: 2vh;
+    text-align: center;
+    list-style-type: none;
 }
 
-a, .recipe-steps{
+a,
+.recipe-steps {
     text-decoration: none;
     color: #ffffff;
 }
@@ -75,7 +79,7 @@ a:hover {
 
 #logotype {
     width: 350px;
-    padding-top: 15vw;
+    padding-top: 5vw;
     padding-bottom: 5vw;
     margin: auto;
     display: block;
